// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link Default <bolt-link> with Shadow DOM renders with no extra whitespace 2`] = `
<div
  style=""
>
  (
  <bolt-link
    style=""
    url="http://pega.com"
  >
    Link Test -- No extra whitespace
  </bolt-link>
  )
</div>
`;

exports[`link Link with an onClick attributes renders properly 1`] = `
<bolt-link display="inline"
           valign="center"
           on-click="on-click-test"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
     on-click="on-click-test"
  >
    <replace-with-children class="c-bolt-link__text">
      Link w/ onClick via attributes
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with an onClick param renders properly 1`] = `
<bolt-link display="inline"
           valign="center"
           on-click="on-click-test"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with onClick via param
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with c-bolt- class is thrown out 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with outer JS-prefixed class
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with inner classes via Drupal Attributes 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center is-active"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with inner classes
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with outer JS-class via Drupal Attributes 1`] = `
<bolt-link display="inline"
           valign="center"
           class="js-click-me"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with outer JS-prefixed class
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with outer classes via Drupal Attributes 1`] = `
<bolt-link display="inline"
           valign="center"
           class="u-bolt-padding-medium"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with outer classes
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link basic link 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link display: flex 1`] = `
<bolt-link display="flex"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-flex c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link display: inline 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link valign: center 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link valign: start 1`] = `
<bolt-link display="inline"
           valign="start"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-start"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;
